@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.21 2005/05/22 20:08:22 jlam Exp $
+# $NetBSD: Makefile.common,v 1.22 2005/06/01 18:45:46 jmmv Exp $
 
 MPLAYER_DIST_VERSION=	1.0pre7
 
@@ -53,49 +53,4 @@ CONFIGURE_ENV+=		TMPDIR=${WRKDIR}
 
 .include "../../mk/bsd.prefs.mk"
 
-.if ${MACHINE_ARCH} == "i386"
-CONFIGURE_ARGS+=	--with-win32libdir="${LOCALBASE}/lib/win32"
-.  if ${MPLAYER_ENABLE_RUNTIME_CPU_DETECTION} == YES
-CONFIGURE_ARGS+=	--enable-runtime-cpudetection
-.  endif
-BUILD_DEFS+=		MPLAYER_ENABLE_RUNTIME_CPU_DETECTION
-.endif
-
-.if ${MACHINE_ARCH} == "i386" || ${MACHINE_ARCH} == "powerpc" || ${MACHINE_ARCH} == "alpha"
-CONFIGURE_ARGS+=	--with-reallibdir="${LOCALBASE}/lib/RealPlayer8-Codecs"
-.endif
-
-.if ${OPSYS} == "NetBSD" || ${OPSYS} == "Linux"
-CONFIGURE_ARGS+=	--with-cdparanoiaincdir="${LOCALBASE}/include/cdparanoia"
-.endif
-
-.if ${OPSYS} == "SunOS" && !empty(MPLAYER_USE_MEDIALIB:M[Yy][Ee][Ss])
-CONFIGURE_ARGS+=	--enable-mlib
-.else
-CONFIGURE_ARGS+=	--disable-mlib
-.endif
-
-# Keep this list in sync with the one in bsd.pkg.defaults.mk, where
-# MPLAYER_DISABLE_DRIVERS is explained.
-MPLAYER_DRIVERS=	arts		audio/arts 		arts \
-			esd		audio/esound 		esd \
-			nas		audio/nas		nas \
-			sdl		devel/SDL		sdl
-
-# arts is currently broken on Solaris.
-.if ${OPSYS} == "SunOS"
-MPLAYER_DISABLE_DRIVERS+=	arts
-.endif
-
-.if defined(PKGNAME) && !empty(PKGNAME:M*encoder*)
-MPLAYER_DISABLE_DRIVERS=arts esd nas sdl
-.else
-BUILD_DEFS+=		MPLAYER_DISABLE_DRIVERS
-.endif
-.for drv pkg val in ${MPLAYER_DRIVERS}
-.  if empty(MPLAYER_DISABLE_DRIVERS:M${drv})
-CONFIGURE_ARGS+=	--enable-${val}
-.  else
-CONFIGURE_ARGS+=	--disable-${val}
-.  endif
-.endfor
+.include "../../multimedia/mplayer-share/options.mk"
