@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.17 2005/04/18 17:49:41 drochner Exp $
+# $NetBSD: Makefile,v 1.18 2005/06/01 18:45:46 jmmv Exp $
 
 PKGNAME=	mplayer-${MPLAYER_PKG_VERSION}
+PKGREVISION=	1
 
 COMMENT=	Software-only MPEG-1/2/4 video decoder
 
