@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.10271 2005/06/01 14:15:12 abs Exp $
+$NetBSD: CHANGES,v 1.10272 2005/06/01 18:45:45 jmmv Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 	
@@ -2753,3 +2753,5 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated pkgtools/pkg_chk to 1.58 [abs 2005-06-01]
 	Updated audio/SDL_mixer to 1.2.6nb2 [wiz 2005-06-01]
 	Updated pkgtools/pkg_chk to 1.59 [abs 2005-06-01]
+	Updated multimedia/mplayer 1.0rc7nb1 [jmmv 2005-06-01]
+	Updated multimedia/gmplayer 1.0rc7nb1 [jmmv 2005-06-01]
